2017-05-28  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-669

	* src/m_cloudradar.cc (pndFromPSD, psdMH97): Started.

	* Added some variables for moving towards tests of scattering
	jacobians. So far just handling one scattering species, and
	temporary naming and no documentation text written. pnd_agenda is
	now defined to cover one point, but it should be consider to
	instead let it cover multiple points to decrease the overhead due
	to repeated checks.

	* src/agendas.cc: Added pnd_agenda.

	* src/workspace.cc: Added dpnd_dx, dpsd_dx, pnd_agenda, pnd,
	pnd_input, pnd_input_names, psd and psd_grid.

2017-05-26  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-668

	* More work on scattering jacobians.

	* src/m_rte.cc (iyEmissionStandard): Introduced new variables and
	adopted call of get_pointers_for_analytical_jacobians.

	* src/jacobian.cc (get_pointers_for_analytical_jacobians): Added
	scat_species_i and nscats as functiuon arguments.

	* src/m_transmitter.cc (iyRadioLink):
	* src/m_fos.cc (fos): t_nlte_field_dumme renamed to
	t_nlte_field_empty, and clearly init to be empty. Introduced new
	variables and adopted call of
	get_pointers_for_analytical_jacobians.

	* src/m_jacobian.cc (jacobianAddScatSpecies)
	(jacobianCalcScatSpeciesAnalytical): New methods. So far just
	coding, no testing at all.

2017-05-26  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-667

	* src/m_linemixing.cc:  Updated to perform calculations with ordered
	line mixing output from RELMAT.  This avoids some complications that
	are probably numerical in nature that we encounter with the full
	approach...

	* src/methods.cc:  Updated interface to the line mixing code

	* 3rdparty/relmat/*:  Using Teresa's latest version

2017-05-25  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-666

	* BUG fix!!! The transmission in iyCloudRadar was incorrect. No
	error if cloudbox covered complete atmosphere, otherwise simulated